# quikscore

./: .gitignore  LICENSE  README.md  auth.html  devenv.nix  flake.nix  missing-hashes.json  nohup.out  package-lock.json  package.json  vite.config.ts  yarn-hash.txt
.github/ISSUE_TEMPLATE/: user-story.md
.github/workflows/: auto-hashes.yaml  cd.yaml  ci.yaml  coverage.yaml  issue-start-end-date.yaml
playground/: test.py
server/: package-lock.json  package.json  server.js
src/: App.vue  Authen.vue  auth.ts  main.spec.ts  messages.ts  types.ts
src-tauri/: .env  .gitignore  Cargo.toml  build.rs  rust-toolchain.toml  tauri.conf.json  test_scores.csv  windows-app-manifest.xml
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: logo.icns
src-tauri/output/: score_1.csv  score_2.csv  score_4.csv
src-tauri/src/: commands.rs  download.rs  errors.rs  image.rs  lib.rs  main.rs  ocr.rs  scoring.rs  state.rs  storage.rs
src-tauri/tests/assets/: tesseract.patterns  weights.csv  weights2.csv  weights3.csv
src/assets/: StackedProgressBar.vue
src/components/: ImagePreview.vue  StackedProgressBar.vue
