[package]
name = "quikscore"
version = "0.1.1"
description = "Automatically scan and score answer sheets."
authors = ["66991014", "66991035", "66991041", "66991043"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "quikscore_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
avx512 = ["ocrs/avx512"]
ocr-tests = []

# https://github.com/robertknight/ocrs/issues/117#issuecomment-2362314977
[profile.dev.package."ocrs"]
opt-level = 3
[profile.dev.package."rten"]
opt-level = 3

[build-dependencies]
tauri-build = { version = "2", features = [] }
which = "8.0.0"

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
opencv = {version = "0.94.4", features = ["clang-runtime"] }
tauri-plugin-dialog = "2"
base64 = "0.22.1"
thiserror = "2.0.12"
tauri-plugin-fs = "2"
itertools = "0.14.0"
rayon = "1.10.0"
ocrs = "0.10.3"
anyhow = "1.0.98"
rten = "0.18.0"
csv = "1.3.1"
sha2 = "0.10.9"
futures = "0.3.31"
reqwest = { version = "0.12.22", features = ["stream"] }
dirs = "6.0.0"
hex-literal = "1.0.0"
tokio = "1.47.0"
env_logger = "0.11.8"
log = "0.4.27"
mongodb = "3.2.4"
dotenvy = "0.15.7"
